@@ -133,7 +133,7 @@ result description			{display:block; padding:10px 40px; white-space:pre-line; un
 result description narrative{line-height:24px; word-spacing:0.05em; color:#000;}
 result span-title			{display:block; font-size:30px; width:880px; line-height:1.25em; margin:0 auto; color:#000;}
 result span-title narrative	{display:block; padding:10px 0;}
-result:nth-of-type(1):before{content:"RESULTS"; font-size:26px; color:#FFF; background-color:#000; display:block; padding:20px 40px; margin-bottom:25px; width:900px; margin-left:-10px;}
+result:nth-of-type(1):before{content:"RESULTS"; font-size:26px; color:#000; display:block; padding:20px 40px; margin-bottom:25px; width:880px; border-bottom:1px solid #000;}
 result span-title:before	{content:"RESULTS"; font-size:14px; color:#000; display:block; margin-bottom:15px;}
 result[type="1"] span-title:before	{content:"OUTPUT";}
 result[type="2"] span-title:before	{content:"OUTCOME";}
@@ -191,12 +191,9 @@ result indicator comment			{padding:10px 0; font-style:italic; line-height:20px;
 target comment narrative, actual comment narrative, target comment span-narrative, actual comment span-narrative	{display:block; font-size:16px; line-height:1.25em;}
 
 result indicator period baseline, result indicator period target, result indicator period actual	{min-height:60px; display:table-cell;}
-result indicator period baseline	{background-color:#BEB9B9; width:180px; max-width:180px; padding:20px;}
-result indicator period target		{background-color:#DEDEDE; width:290px; max-width:290px; padding:20px;}
-result indicator period actual		{background-color:#CECECE; width:290px; max-width:290px; padding:20px;}
-
-result indicator period actual .value-higher	{background-color:#BEB9B9;}
-result indicator period actual .value-lower		{background-color:#BEB9B9;}
+result indicator period baseline	{width:180px; max-width:180px; padding:20px; border:1px solid #000; border-right:0;}
+result indicator period target		{width:290px; max-width:290px; padding:20px; border:1px solid #000;}
+result indicator period actual		{width:290px; max-width:290px; padding:20px; border:1px solid #000; border-left:0;}
 
 result indicator reference			{display:block; padding:20px; border:1px solid #000; margin-top:20px; margin-bottom:20px;}
 result indicator reference:before	{content:"REFERENCE"; font-size:14px; color:#000; display:block; margin:auto; margin-bottom:15px; padding-bottom:10px;}
@@ -291,12 +288,7 @@ activity-website:hover	{color:#fff; text-decoration:underline;}
 
 /*	Activity Status
 	============================================= */
-activity-status[code="1"]	{background-color:#e9e9e9;}
-activity-status[code="2"]	{background-color:#e9e9e9;}
-activity-status[code="3"]	{background-color:#e9e9e9;}
-activity-status[code="4"]	{background-color:#e9e9e9;}
-activity-status[code="5"]	{background-color:#e9e9e9;}
-activity-status				{display:block; font-size:20px; background-color:#e9e9e9; width:958px; text-align:center; margin:0 auto; padding:40px 0; max-height:150px; color:#000;}
+activity-status				{display:block; font-size:20px; border-top:1px solid #000; width:958px; text-align:center; margin:0 auto; padding:40px 0; max-height:150px; color:#000;}
 activity-status:before		{content:"ACTIVITY STATUS:"; font-size:14px; color:#000; font-weight:bold; display:inline-block; padding-right:10px;}
 
 
