@@ -193,7 +193,7 @@ span.ask				{background-color:#000; display:block; width:960px; margin:0 auto; p
 /*	Map styles
 	============================================= */
 .map_wrap				{width:100%; min-height:300px; max-height:400px; margin:0 auto; background-color:#000; position:relative;}
-.map_info				{width:800px; margin:0 auto; top:0; left:-100px; right:-100px; padding:10px 40px; font-size:1.1em; color:#FFF; line-height:1.35em; position:absolute; background-color:#000; border-radius:0 0 8px 8px; text-align:center;}
+.map_info				{width:800px; margin:0 auto; top:0; left:-100px; right:-100px; padding:10px 40px; font-size:1.1em; color:#000; line-height:1.35em; position:absolute; background-color:#FFF; border-radius:0 0 8px 8px; text-align:center; border:1px solid #000;}
 .map_no_info			{color:#FFF; font-size:1.2em; line-height:1.35em; text-align:center; position:absolute; top:50%; left:20%; right:20%;}
 a.map_percent			{display:block; width:140px; margin:0 auto; bottom:30px; left:-80px; right:-778px; padding:10px 15px 15px 15px; font-size:0.95em; color:#000; line-height:1.15em; position:absolute; background-color:#FFF; border-radius:8px; z-index:1; text-align:left; border:1px solid #000;}
 a.map_percent:hover		{background-color:#E9E9E9;}
@@ -514,8 +514,8 @@ table.data td			{color:#000; font-size:1.0em; line-height:24px; padding:20px; ve
 /*	Data Investigators alert
 	============================================= */
 .data_wrap				{position:absolute; bottom:0; width:100%; margin:0 auto;}
-a.data_invest			{display:block; width:100%; margin:0 auto; padding:10px 0; line-height:1.5em; font-size:16px; color:#FFF; text-align:center; background-color:#000;}
-a.data_invest:hover		{color:#FFF; background-color:#000; text-decoration:underline;}
+a.data_invest			{display:block; width:100%; margin:0 auto; padding:10px 0; line-height:1.5em; font-size:16px; color:#000; text-align:center; border-top:1px solid #000;}
+a.data_invest:hover		{color:#000; background-color:#ddd; text-decoration:none;}
 
 
 /*	Footer
