@@ -3,6 +3,7 @@ Development Portal (2017-03-10 shi)
 Fix timeline and visual indicators for dates in results data
 Update new css for Print Friendly version
 Move target value on the same line as baseline value
+Fixed Print Friendly elements with background colour
 
 
 Development Portal (2017-03-07 shi)
